--- a/port.html
+++ b/port.html
@@ -18,6 +18,7 @@
       <nav>
         <ul>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#Experince">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact 2">Contact</a></li>
           <li><a href="#education">Education</a></li>
