--- a/port.html
+++ b/port.html
@@ -5,7 +5,7 @@
     
     <link rel="stylesheet" href="port.css">
     <script src="port.js"></script>
-    <link rel="icon" type="image/x-icon" href="docs\android-chrome-192x192.png">
+    <link rel="icon" type="image/x-icon" href="android-chrome-192x192.png">
   </head>
   <body>
     <header>
@@ -18,11 +18,11 @@
       <nav>
         <ul>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#Experince">Projects</a></li>
+          <li><a href="#Experince">Experience</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#contact 2">Contact</a></li>
           <li><a href="#education">Education</a></li>
-          <li><a href="King hiholike.pdf">Download Resume</a></li>
+          <li><a href="KING HIHOLIKE Resume..pdf">Download Resume</a></li>
         </ul>
       </nav>
     </header>
@@ -57,7 +57,7 @@
         <h2>Projects</h2>
         <div class="project-container">
           <div class="project-card">
-            <img src="docs\ballerina.png" alt="Project 1">
+            <img src="ballerina.png" alt="Project 1">
             <div class="project-details">
               <h3>Ballerina API'S </h3>
               <p>Ballerina programing language build tool and package manager. Among other things, ballerina helps you to create, build, test, and run your package. The latest bal tool version is available with the latest Ballerina installation.</p>
@@ -65,7 +65,7 @@
             </div>
           </div>
           <div class="project-card">
-            <img src="docs\confernce.jpg" alt="Project 2">
+            <img src="confernce.jpg" alt="Project 2">
             <div class="project-details">
               <h3>Conference Website</h3>
               <p>Conference website that enables admin to manage new members , view topics and speakers as well as upcoming events. </p>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="project-card">
-            <img src="docs\librarysystem.jpeg" alt="Project 3">
+            <img src="librarysystem.jpeg" alt="Project 3">
             <div class="project-details">
               <h3>Library Management System</h3>
               <p>A system that enables admin to administer books orderd and prescripe new books , as well as the registration of new members in to the library.</p>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="project-card">
-            <img src="docs\attendence.jpg" alt="Project 4">
+            <img src="attendence.jpg" alt="Project 4">
             <div class="project-details">
               <h3>Android Attendence App</h3>
               <p>An adroid native app , that allows admin to add faculty , faculty can add new students to a class and keep track of their attendence.</p>
@@ -89,7 +89,7 @@
             </div>
           </div>
           <div class="project-card">
-            <img src="docs\swapo.jpg" alt="Project 5">
+            <img src="swapo.jpg" alt="Project 5">
             <div class="project-details">
               <h3>Testing of SWAPO Membership Management System</h3>
               <p>The SMMS is a system that allows for the registration of new members/Comrades , with the fuction of viewing their fees and validate the registartion of new members.</p>
@@ -148,7 +148,7 @@
         <h2>Education</h2>
         <div class="education-container">
           <div class="education-card">
-            <img src="docs\nu;s;t.png" alt="University Logo 1">
+            <img src="nu;s;t.png" alt="University Logo 1">
             <div class="education-details">
               <h3>Bachelor of Science in Computer Science in Software Engineering</h3>
               <p>Namibia University of Science and Technology</p>
